...
import puzzles from "./puzzles.json";

export type Route =
  | "home"
  | "game"
  | "intro"
  | "tutorial"
  | "success"
  | "stats";
export type PuzzleMode = "tutorial" | PackMode;

const sum = (a: number, b: number) => a + b;

...
  retired: record.retired,
  type: "puzzle",
});

const playableRecords: Record<PuzzleMode, PlayableRecord[]> = {
  tutorial: puzzles.tutorial.map(fromTutorial),
  small: getPackRecords("small").map(fromPack),
  medium: getPackRecords("medium").map(fromPack),
  large: getPackRecords("large").map(fromPack),
  extraordinary: getPackRecords("extraordinary").map(fromPack),
};

const buildLookup = <Value>(
...
    return (
      this.routesHistory.length > 1 &&
      this.routesHistory.filter((x) => x === "home").length > 1
    );
  }

  changeRoute(route: Route, puzzleMode?: PuzzleMode | "continue") {
    switch (route) {
      case "intro": {
        if (puzzleMode !== "continue") {
          this.root.puzzle.setRandomPuzzle(puzzleMode);
        }
        break;
...
      setPuzzle: action,
      setRandomPuzzle: action,
      nextPuzzle: action,
      onPuzzleStarted: action,
      onPuzzleCompleted: action,
      restoreSavedBoard: action,
      reset: action,
    });
  }

  get current() {
    if (this.mode && this.index !== undefined) {
      return playableRecords[this.mode][this.index];
...
