...
          ]}
        >
          {puzzle.tutorialMessage}
        </Text>
      </View>
      <BottomNav animValue={fadeBottomAnim.value}>
        <Button onPress={handleButtonPress} label="menu" />
      </BottomNav>
    </View>
  );
};

const createStyles = ({ scale }: { scale: ScalingFunc }): any => ({
...
