...
    .concat(letterList.map((letter) => ({ type: "letter", value: letter })));

  return (
    <TouchableWithoutFeedback onPress={handlePress}>
      <Animated.View
        style={[styles.root, animations.fadeSlideTop(hideAnim.value, scale)]}
        testID="screen-intro"
      >
        {chars.map((char, index) => {
          const delay = (1 / chars.length) * index;
          return (
            <AnimatedLetter
              key={index}
...
