...
    getHeaderHeight(scale) -
    metrics.screenMargin * 4; // Additional vertical padding

  return (
    <Animated.View
      style={[styles.root, animations.fade(fadeRootAnim.value)]}
      testID="screen-game"
    >
      <KeepAwake />
      <Header
        prefix={puzzle.prefix}
        name={puzzle.name}
        fadeAnimValue={fadeInterfaceAnim.value}
...
